--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -217,6 +217,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CryptCS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CryptCS.Designer.cs">
+      <DependentUpon>CryptCS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ErrList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -402,6 +408,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CryptCS.resx">
+      <DependentUpon>CryptCS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DES.resx">
       <SubType>Designer</SubType>
