--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -293,6 +293,12 @@
     <Compile Include="Forms\SrvsMgr\DBC.Designer.cs">
       <DependentUpon>DBC.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SqlOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SqlOut.Designer.cs">
+      <DependentUpon>SqlOut.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\ResultTable.cs">
       <SubType>UserControl</SubType>
@@ -441,6 +447,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SrvsMgr\DBC.resx">
       <DependentUpon>DBC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SqlOut.resx">
+      <DependentUpon>SqlOut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
