--- a/Apq/Apq.DBC/Apq.DBC.csproj
+++ b/Apq/Apq.DBC/Apq.DBC.csproj
@@ -71,6 +71,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\Apq.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
