--- a/Apq/Apq.DBC/app.config
+++ b/Apq/Apq.DBC/app.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 	<configSections>
 	</configSections>
 	<connectionStrings>
 	</connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
