--- a/Apq/Apq/App.config
+++ b/Apq/Apq/App.config
@@ -1,42 +1,40 @@
 <?xml version="1.0"?>
 <configuration>
 	<configSections>
-		<section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
-		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-			<section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="log4net" type="System.Configuration.IgnoreSectionHandler"/>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-  <add name="Apq.Properties.Settings.ApqConnectionString" connectionString="Data Source=.;Initial Catalog=Apq;Persist Security Info=True;User ID=sa;Password=f"
-   providerName="System.Data.SqlClient" />
- </connectionStrings>
+		<add name="Apq.Properties.Settings.ApqConnectionString" connectionString="Data Source=.;Initial Catalog=Apq;Persist Security Info=True;User ID=sa;Password=f" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 	<appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
 		<!-- To enable internal log4net logging specify the following appSettings key -->
 		<!-- <add key="log4net.Internal.Debug" value="true"/> -->
-		<add key="ClientSettingsProvider.ServiceUri" value="" />
+		<add key="ClientSettingsProvider.ServiceUri" value=""/>
 	</appSettings>
 	<startup>
-		<supportedRuntime version="v2.0.50727" />
-	</startup>
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup>
 	<system.web>
 		<membership defaultProvider="ClientAuthenticationMembershipProvider">
 			<providers>
-				<add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+				<add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
 			</providers>
 		</membership>
 		<roleManager defaultProvider="ClientRoleProvider" enabled="true">
 			<providers>
-				<add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+				<add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
 			</providers>
 		</roleManager>
 	</system.web>
 	<applicationSettings>
 		<Apq.Properties.Settings>
-   <setting name="XmlAsmConfigFolder" serializeAs="String">
-    <value />
-   </setting>
-  </Apq.Properties.Settings>
+			<setting name="XmlAsmConfigFolder" serializeAs="String">
+				<value/>
+			</setting>
+		</Apq.Properties.Settings>
 	</applicationSettings>
 </configuration>
