--- a/ApqDBManager/ApqDBCManager/App.config
+++ b/ApqDBManager/ApqDBCManager/App.config
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="ResourceFilePath" value="Res\ConnResourceSA.res"/>
+		<add key="Apq.DBC.csFile" value="Lookup.xml"/>
 	</appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+	</startup>
+</configuration>
