--- a/ApqDBManager/ApqDBManager/Apq.DBC.dll.config
+++ b/ApqDBManager/ApqDBManager/Apq.DBC.dll.config
@@ -1,10 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="Apq.DBC.Properties.Settings.Apq_DBAConnectionString"
-            connectionString="Data Source=.;Initial Catalog=Apq_DBA;Persist Security Info=True;User ID=apq;Password=f"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-</configuration>
+	<configSections>
+	</configSections>
+	<connectionStrings>
+	</connectionStrings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
