--- a/ApqDBManager/ApqDBManager/App.config
+++ b/ApqDBManager/ApqDBManager/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="Apq.DBC.csFile" value="DBI.res"/>
+		<add key="Apq.DBC.csFile" value="D:\DBA\cs\DBI.res"/>
 	</appSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
