--- a/ApqDBManager/ApqDBManager/Apq.WorkFlow.dll.config
+++ b/ApqDBManager/ApqDBManager/Apq.WorkFlow.dll.config
@@ -1,7 +1,19 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
-	<appSettings>
+	<configSections>
+  <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+   <section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+  </sectionGroup>
+ </configSections>
+ <appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
 	</appSettings>
-</configuration>
+ <applicationSettings>
+  <Apq.Properties.Settings>
+   <setting name="XmlAsmConfigFolder" serializeAs="String">
+    <value/>
+   </setting>
+  </Apq.Properties.Settings>
+ </applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
