--- a/Apq/Apq/Apq.csproj
+++ b/Apq/Apq/Apq.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Drawing\GraphicsHelper.cs" />
     <Compile Include="Editor\ITextEditor.cs" />
     <Compile Include="Editor\IFileLoader.cs" />
+    <Compile Include="HtmlEncode.cs" />
     <Compile Include="Interfaces\IDataShow.cs" />
     <Compile Include="IO\FileSystem.cs" />
     <Compile Include="Net\FtpClient.cs" />
